--- a/packages/fxa-admin-panel/package.json
+++ b/packages/fxa-admin-panel/package.json
@@ -16,16 +16,20 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.7",
     "body-parser": "^1.19.0",
     "convict": "^5.2.0",
+    "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
+    "graphql": "^14.6.0",
     "helmet": "^3.21.3",
     "mozlog": "^2.2.0",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "on-headers": "^1.0.2",
     "react": "^16.13.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
@@ -51,6 +55,7 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "@types/convict": "^4.2.1",
+    "@types/dateformat": "^3.0.1",
     "@types/express": "^4.17.2",
     "@types/helmet": "0.0.45",
     "@types/jest": "^25.1.3",
